Fix bugs in GitHub Gist block and switch from using the Placeholder component within Gutenberg to a newly created custom Placeholder component that supports SVG icons. Move all blocks into a /blocks subdirectory and create a new directory for components to live in, include a vendor library for autoloading PHP files and use it to automatically load all php files within the /src directory

--- a/src/common.scss
+++ b/src/common.scss
@@ -5,7 +5,12 @@
  * that are used across the project.
 */
 
+// Fonts & basics
+$default-font: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+$default-font-size: 13px;
+
 // Colors.
+$light-gray-100: #f8f9f9;
 $black: rgb(41, 41, 41);
 $white: #f4f4f4;
 $gray: #dedede;
