--- a/src/blocks/example-block-with-options/style.scss
+++ b/src/blocks/example-block-with-options/style.scss
@@ -3,9 +3,15 @@
 	position: relative;
 
 	.video-container {
-	    left: 0;
+		height: 100%;
+	    left: 50%;
+	    min-height: 100%;
+	    min-width: 100%;
+		object-fit: none;
+		object-position: center center;
 	    position: absolute;
-	    top: 0;
+		transform: translate(-50%, -50%);
+	    top: 50%;
 	    width: 100%;
 	    z-index: -1;
 	} // .video-container
