Adjusts the position of the SVG icon in our panel buttons

--- a/src/components/background-options/editor.scss
+++ b/src/components/background-options/editor.scss
@@ -1,6 +1,17 @@
+//--------------------------------------------------------------
+// Background Options Panel
+//--------------------------------------------------------------
 .wds-background-options {
 
 	.blocks-base-control {
 		width: 100%;
 	} // .blocks-base-control
+
+	.components-button {
+
+		svg {
+			position: relative;
+			top: 5px;
+		} // svg
+	} // .components-button
 } // .wds-background-options
