add standard wds comment block

--- a/src/components/other-options/editor.scss
+++ b/src/components/other-options/editor.scss
@@ -1,3 +1,6 @@
+//--------------------------------------------------------------
+// Other Options Panel
+//--------------------------------------------------------------
 .wds-other-options {
 
 	.blocks-base-control {
