normalize editor style docblock

--- a/src/components/background-options/editor.scss
+++ b/src/components/background-options/editor.scss
@@ -1,5 +1,8 @@
 //--------------------------------------------------------------
-// Background Options Panel
+// Editor Styles
+//
+// Additional styles necessary to assist the editor.
+// Enqueued after style.scss.
 //--------------------------------------------------------------
 .wds-background-options {
 
