--- a/src/components/other-options/editor.scss
+++ b/src/components/other-options/editor.scss
@@ -1,5 +1,8 @@
 //--------------------------------------------------------------
-// Other Options Panel
+// Editor Styles
+//
+// Additional styles necessary to assist the editor.
+// Enqueued after style.scss.
 //--------------------------------------------------------------
 .wds-other-options {
 
