--- a/src/components/text-options/editor.scss
+++ b/src/components/text-options/editor.scss
@@ -1,9 +1,8 @@
 //--------------------------------------------------------------
-// Text Options Panel
+// Editor Styles
+//
+// Additional styles necessary to assist the editor.
+// Enqueued after style.scss.
 //--------------------------------------------------------------
 .wds-text-options {
-
-	.blocks-base-control {
-		width: 100%;
-	} // .blocks-base-control
 } // .wds-text-options
