--- a/src/blocks/default/style.scss
+++ b/src/blocks/default/style.scss
@@ -4,16 +4,25 @@
 // Default styles for this block.
 // Appears on both front and back-end.
 //--------------------------------------------------------------
-.wp-block-wds-default {
-	border: 2px solid #000000;
-	color: #111111;
-	margin: 0 auto;
-	max-width: 740px;
-	padding: 32px;
+.has-video-background {
+	overflow: hidden;
+	position: relative;
 
-	// Reset <p>
-	p {
-		margin: 0;
-		padding: 0;
-	}
-}
+	.video-container {
+		height: 100%;
+		left: 50%;
+		min-height: 100%;
+		min-width: 100%;
+		object-fit: none;
+		object-position: center center;
+		position: absolute;
+		transform: translate(-50%, -50%);
+		top: 50%;
+		width: 100%;
+		z-index: -1;
+	} // .video-container
+} // .has-video-background
+
+.has-custom-background {
+	padding: 20px;
+} // .has-custom-background
