Tweaks class names for dashboard CSS

--- a/src/blocks/fifty-fifty-block/editor.scss
+++ b/src/blocks/fifty-fifty-block/editor.scss
@@ -32,9 +32,9 @@ div[data-type='wds/editable-content-two-column'] {
 //-----------------------------------------
 // Background Options
 //-----------------------------------------
-.wds-fifty-fifty-options {
+.wds-two-column-options {
 
 	.blocks-base-control {
 		width: 100%;
 	} // .blocks-base-control
-} // .wds-fifty-fifty-options
+} // .wds-two-column-options
