Adds a class if no title is set and styles appropriately

--- a/src/blocks/fifty-fifty-block/editor.scss
+++ b/src/blocks/fifty-fifty-block/editor.scss
@@ -17,6 +17,10 @@
 			} // svg
 		} // .components-button
 	} // .content-block-container
+
+	.no-title-set {
+		opacity: 0.5
+	} // .no-title-set
 } // .wp-block-wds-editable-content-two-column
 
 div[data-type='wds/editable-content-two-column'] {
