--- a/src/blocks/hero/style.scss
+++ b/src/blocks/hero/style.scss
@@ -7,4 +7,8 @@
 .wp-block-wds-hero {
 	background-repeat: no-repeat;
 	background-size: cover;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	min-height: 640px;
 } // .wp-block-wds-hero
