Removes the background color on the block title field

--- a/src/blocks/fifty-fifty-block/editor.scss
+++ b/src/blocks/fifty-fifty-block/editor.scss
@@ -18,10 +18,9 @@
 		} // .components-button
 	} // .content-block-container
 
-	.no-title-set {
-		opacity: 0.5
-	} // .no-title-set
-
+	.block-title {
+		background-color: transparent;
+	} // .block-title
 } // .wp-block-wds-editable-content-two-column
 
 
