--- a/src/blocks/two-column-block/style.scss
+++ b/src/blocks/two-column-block/style.scss
@@ -4,7 +4,7 @@
  * CSS for both Frontend+Backend.
  */
 
-.wp-block-wds-editable-content-two-column {
+.wp-block-wds-two-column {
 
 	.content-block-container {
 		display: flex;
@@ -18,4 +18,4 @@
 			margin-left: 20px
 		} // &:last-child
 	} // .content-block-content
-} // .wp-block-wds-editable-content-two-column
+} // .wp-block-wds-two-column
