removes margin from h2 to clean up output of block title

--- a/src/components/block-title/editor.scss
+++ b/src/components/block-title/editor.scss
@@ -7,3 +7,13 @@
 .wds-block-title {
 	background-color: transparent;
 } // .wds-block-title
+
+//-----------------------------------------
+// Title
+//-----------------------------------------
+.content-block-header {
+
+	h2 {
+		margin-bottom: 0;
+	} // h2
+} // .content-block-header
