adds base styles for searchform in related posts component

--- a/src/blocks/new-related-posts/editor.scss
+++ b/src/blocks/new-related-posts/editor.scss
@@ -64,3 +64,14 @@
 		} // img
 	} // .wp-block-loader
 } // .wp-block-wds-related-posts-test
+
+//-----------------------------------------
+// Form
+//-----------------------------------------
+.wds-related-posts-search-form {
+	border-bottom: 0;
+	border-radius: 0;
+	font-size: 1rem;
+	margin: 0;
+	width: 100%;
+}
