targets search more directly

--- a/src/blocks/new-related-posts/editor.scss
+++ b/src/blocks/new-related-posts/editor.scss
@@ -68,7 +68,7 @@
 //-----------------------------------------
 // Form
 //-----------------------------------------
-.wds-related-posts-search-form {
+.editor-block-list__block input.wds-related-posts-search-form {
 	border-bottom: 0;
 	border-radius: 0;
 	font-size: 1rem;
