adds a little breathing room to the bottom of the gist block so it doesn’t overlap the next block that’s added.

--- a/src/blocks/github-gist/editor.scss
+++ b/src/blocks/github-gist/editor.scss
@@ -1,11 +1,23 @@
+//--------------------------------------------------------------
+// Editor Styles
+//
+// Additional styles necessary to assist the editor.
+//--------------------------------------------------------------
+
+.wp-block-wds-gihub-gist {
+	display: block;
+	margin: 0 0 30px 0;
+	overflow: hidden;
+} // .wp-block-wds-gihub-gist
+
 .gist-block-controls {
-  padding: 2px;
+	padding: 2px;
 
-  input[type="url"] {
-    min-width: 350px;
-  }
+	input[type="url"] {
+		min-width: 350px;
+	} // input[type="url"]
 
-  .button {
-    font-family: $default-font;
-  }
-}
+	.button {
+		font-family: $default-font;
+	} // .button
+} // .gist-block-controls
