--- a/src/blocks/new-related-posts/editor.scss
+++ b/src/blocks/new-related-posts/editor.scss
@@ -34,6 +34,7 @@
 
 			li {
 				border-bottom: 1px solid $gray;
+				cursor: pointer;
 				font-size: 1rem;
 				line-height: 1.125rem;
 				list-style: none;
@@ -54,6 +55,7 @@
 			li {
 
 				&.is-selected {
+					cursor: default;
 					opacity: 0.5;
 					pointer-events: none;
 				} // .is-selected
