--- a/src/common.scss
+++ b/src/common.scss
@@ -1,18 +1,52 @@
-/**
- * #.# Common SCSS
- *
- * Can include things like variables and mixins
- * that are used across the project.
-*/
+//--------------------------------------------------------------
+// Common Styles SCSS
+//
+// Can include things like variables and mixins.
+// that are used across the project.
+//--------------------------------------------------------------
 
+//--------------------------------------------------------------
 // Fonts & basics
+//--------------------------------------------------------------
 $default-font: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 $default-font-size: 13px;
 
-// Colors.
+//--------------------------------------------------------------
+// Colors
+//--------------------------------------------------------------
 $light-gray-100: #f8f9f9;
 $black: rgb(41, 41, 41);
 $white: #f4f4f4;
 $gray: #dedede;
 $green: #bada55;
 $red: orangered;
+//--------------------------------------------------------------
+// Breakpoints
+//--------------------------------------------------------------
+
+/// Larger HD Desktops.
+$desktop-large: 1800px;
+
+/// Standard Desktops and Larger Laptops.
+$desktop: 1200px;
+
+/// Smaller Desktops and Standard iPad Tablet.
+$tablet-landscape: 900px;
+
+/// Breakpoint for WP Admin Bar.
+$wp-admin-bar: 783px;
+
+/// Smaller Tablets and Standard iPad Portrait.
+$tablet-portrait: 600px;
+
+/// Phones Smaller Than 500px in Width.
+$phone: 300px;
+
+//--------------------------------------------------------------
+// Breakpoint Mixin
+//--------------------------------------------------------------
+@mixin media($breakpoint) {
+	@media ( min-width: #{ ( $breakpoint ) } ) {
+		@content;
+	}
+} //  @mixin media($breakpoint)
