--- a/src/blocks/two-column-block/style.scss
+++ b/src/blocks/two-column-block/style.scss
@@ -8,14 +8,25 @@
 
 	.content-block-container {
 		display: flex;
+		flex-direction: column;
+
+		@include media($tablet-portrait) {
+			flex-direction: row;
+		}
 	} // .content-block-container
 
 	.content-block-content {
-		flex: 0 1 50%;
-		max-width: 50%;
+		flex: 1 1 100%;
+
+		@include media($tablet-portrait) {
+			flex: 0 1 50%;
+			max-width: 50%;
+		}
 
 		&:last-child {
-			margin-left: 20px
+			@include media($tablet-portrait) {
+				margin-left: 20px;
+			}
 		} // &:last-child
 	} // .content-block-content
 } // .wp-block-wds-two-column
