make sure the hero is only true full width on the front end and just fills the editor area on the backend.

--- a/src/common.scss
+++ b/src/common.scss
@@ -20,6 +20,7 @@ $white: #f4f4f4;
 $gray: #dedede;
 $green: #bada55;
 $red: orangered;
+
 //--------------------------------------------------------------
 // Breakpoints
 //--------------------------------------------------------------
@@ -50,3 +51,15 @@ $phone: 300px;
 		@content;
 	}
 } //  @mixin media($breakpoint)
+
+//--------------------------------------------------------------
+// Full Width
+//--------------------------------------------------------------
+@mixin full-width {
+	left: 50%;
+	margin-left: -50vw;
+	margin-right: -50vw;
+	position: relative;
+	right: 50%;
+	width: 100vw;
+}
