--- a/src/blocks/hero/style.scss
+++ b/src/blocks/hero/style.scss
@@ -11,4 +11,9 @@
 	flex-direction: column;
 	justify-content: center;
 	min-height: 640px;
+
+	// The should help the front end only to work out of the box.
+	.site-content & {
+		@include full-width;
+	} // .site-content &
 } // .wp-block-wds-hero
