center the bg of cusom background options.

--- a/src/blocks/call-to-action/style.scss
+++ b/src/blocks/call-to-action/style.scss
@@ -24,5 +24,7 @@
 } // .has-video-background
 
 .has-custom-background {
+	background-position: center center;
+	background-repeat: no-repeat;
 	padding: 20px;
 } // .has-custom-background
