add is-typing class so block stays at full opacity when editing.

--- a/src/common.scss
+++ b/src/common.scss
@@ -68,6 +68,6 @@ $phone: 300px;
 // If block is not selected or hovered
 // lets put some opacity on it
 //--------------------------------------------------------------
-.editor-block-list__block:not(.is-selected):not(.is-hovered) {
+.editor-block-list__block:not(.is-selected):not(.is-hovered):not(.is-typing) {
 	opacity: 0.25;
 }
