--- a/src/common.scss
+++ b/src/common.scss
@@ -1,80 +1,14 @@
 //--------------------------------------------------------------
 // Common Styles SCSS
-//
-// Can include things like variables and mixins.
-// that are used across the project.
+// Imoported from sass folder parials.
 //--------------------------------------------------------------
+@import 'sass/breakpoints.scss';
+@import 'sass/colors.scss';
+@import 'sass/fonts.scss';
+@import 'sass/full-width.scss';
+@import 'sass/global-blocks.scss';
 
-//--------------------------------------------------------------
-// Fonts & basics
-//--------------------------------------------------------------
-$default-font: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-$default-font-size: 13px;
 
-//--------------------------------------------------------------
-// Colors
-//--------------------------------------------------------------
-$light-gray-100: #f8f9f9;
-$black: rgb(41, 41, 41);
-$white: #f4f4f4;
-$gray: #dedede;
-$green: #bada55;
-$red: orangered;
 
-//--------------------------------------------------------------
-// Breakpoints
-//--------------------------------------------------------------
 
-/// Larger HD Desktops.
-$desktop-large: 1800px;
 
-/// Standard Desktops and Larger Laptops.
-$desktop: 1200px;
-
-/// Smaller Desktops and Standard iPad Tablet.
-$tablet-landscape: 900px;
-
-/// Breakpoint for WP Admin Bar.
-$wp-admin-bar: 783px;
-
-/// Smaller Tablets and Standard iPad Portrait.
-$tablet-portrait: 600px;
-
-/// Phones Smaller Than 500px in Width.
-$phone: 300px;
-
-//--------------------------------------------------------------
-// Breakpoint Mixin
-//--------------------------------------------------------------
-@mixin media($breakpoint) {
-	@media ( min-width: #{ ( $breakpoint ) } ) {
-		@content;
-	}
-} //  @mixin media($breakpoint)
-
-//--------------------------------------------------------------
-// Full Width Mixin
-//--------------------------------------------------------------
-@mixin full-width {
-	left: 50%;
-	margin-left: -50vw;
-	margin-right: -50vw;
-	position: relative;
-	right: 50%;
-	width: 100vw;
-} // @mixin full-width
-
-//--------------------------------------------------------------
-// Global Block Styles (Editor/Backend)
-//--------------------------------------------------------------
-
-//If block is not selected or hovered lets put some opacity on it.
-.editor-block-list__block:not(.is-selected):not(.is-hovered):not(.is-typing) {
-	opacity: 0.25;
-} // .editor-block-list__block:not(.is-selected):not(.is-hovered):not(.is-typing)
-
-// Give our blocks some breathing room in the editor for a better experience.
-.wp-admin [data-type^="wds"] {
-	margin-bottom: 30px;
-	margin-top: 30px;
-} // .wp-admin [data-type^="wds"]
