--- a/src/blocks/call-to-action/style.scss
+++ b/src/blocks/call-to-action/style.scss
@@ -27,4 +27,9 @@
 	background-position: center center;
 	background-repeat: no-repeat;
 	padding: 20px;
+
+	// The should help the front end only to work out of the box.
+	.site-content & {
+		@include full-width;
+	} // .site-content &
 } // .has-custom-background
