--- a/src/blocks/default/editor.scss
+++ b/src/blocks/default/editor.scss
@@ -4,5 +4,11 @@
 // Additional styles necessary to assist the editor.
 // Enqueued after style.scss.
 //--------------------------------------------------------------
-.wp-block-wds-default {
-}
+
+.edit-post-visual-editor .editor-block-list__block {
+	// Taget the hero only here.
+	&[data-type="wds/default"] {
+		max-width: none;
+	} // &[data-type="wds/hero"]
+} // .edit-post-visual-editor .editor-block-list__block
+
