--- a/src/blocks/related-posts/editor.scss
+++ b/src/blocks/related-posts/editor.scss
@@ -1,21 +1,127 @@
 //--------------------------------------------------------------
-// Editor Styles
+// Editor Styles for New Related Posts
 //
 // Additional styles necessary to assist the editor.
 // Enqueued after style.scss.
 //--------------------------------------------------------------
-div[data-type="wds/related-posts"] {
 
-	.all-posts {
-		background-color: #c0c0c0;
-	}
+// sass-lint:disable class-name-format, no-qualifying-elements
 
-	.selected-posts {
-		background-color: #ffff00;
-	}
+.wp-block-wds-related-posts {
+	border: 1px solid $gray;
+	display: flex;
+	font-family: $default-font;
+	position: relative;
 
-	ul {
-		list-style-position: inside;
-		padding-left: 20px;
-	}
+	.related-left-column,
+	.related-right-column {
+		height: 19rem;
+		margin: 0;
+		width: 50%;
+
+		h3 {
+			background-color: $light-gray-100;
+			border-bottom: 1px solid $gray;
+			flex: 0 0 50%;
+			margin: 0;
+			padding: 0.4375rem;
+		} // h3
+
+		> ul {
+			height: calc(100% - 52px); // compensate for heading.
+			margin: 0;
+			overflow-y: auto;
+
+			li {
+				border-bottom: 1px solid $gray;
+				cursor: pointer;
+				font-size: 1rem;
+				line-height: 1.125rem;
+				list-style: none;
+				padding: 0.4375rem;
+
+				&:last-child {
+					border-bottom: 0;
+				} // &:last-child
+			} // li
+		} // > ul
+	} // .related-left-column, .related-right-column
+
+	.related-left-column {
+		border-right: 1px solid $gray;
+
+		> ul {
+
+			li {
+
+				&.is-selected {
+					cursor: default;
+					opacity: 0.5;
+					pointer-events: none;
+				} // .is-selected
+			} // li
+		} // > ul
+	} // .related-left-colum
+
+	//-----------------------------------------
+	// Loader Position
+	//-----------------------------------------
+	.wp-block-loader {
+		background-color: rgba($light-gray-100, 0.8);
+		height: 100%;
+		position: absolute;
+		width: 100%;
+
+		> img {
+			left: 50%;
+			position: absolute;
+			top: 50%;
+			transform: translateX( -50% );
+		} // img
+	} // .wp-block-loader
+} // .wp-block-wds-related-posts-test
+
+//-----------------------------------------
+// Form
+//-----------------------------------------
+.editor-block-list__block input.wds-related-posts-search-form {
+	border-radius: 0;
+	font-size: 1rem;
+	margin: 0 0 -0.0625rem;
+	padding: 0.625rem;
+	position: relative;
+	width: 100%;
+	z-index: 100;
 }
+
+//-----------------------------------------
+// Output
+//-----------------------------------------
+.wp-block-wds-related-posts {
+
+	.selected-posts-container {
+		display: flex;
+		flex-flow: row wrap;
+		padding: 0.625rem 0.625rem 0;
+
+		li {
+			flex: 0 0 30%;
+			list-style: none;
+			margin-bottom: 0.625rem;
+			margin-right: 5%;
+
+			&:nth-child(3n) {
+				margin-right: 0;
+			}
+
+			h3 {
+				margin-top: 0;
+			} // h3
+
+			p {
+				font-size: 0.875rem;
+				margin-bottom: 0;
+			} // p
+		} // li
+	} // .selected-posts-container
+} // .wp-block-wds-new-related-posts
