--- a/src/blocks/related-posts/style.scss
+++ b/src/blocks/related-posts/style.scss
@@ -32,11 +32,13 @@
 			}
 
 			h3 {
+				line-height: 1.125;
 				margin-top: 0;
 			} // h3
 
 			p {
 				font-size: 0.875rem;
+				line-height: 1.5;
 				margin-bottom: 0;
 			} // p
 		} // li
