adds recent posts block copied from core gutenberg latest posts block

--- a/src/blocks/recent-posts/editor.scss
+++ b/src/blocks/recent-posts/editor.scss
@@ -4,5 +4,10 @@
 // Additional styles necessary to assist the editor.
 // Enqueued after style.scss.
 //--------------------------------------------------------------
-.wp-block-wds-default {
+.gutenberg .wp-block-recent-posts {
+	padding-left: 2.5em;
+
+	&.is-grid {
+		padding-left: 0;
+	}
 }
