updates naming conventions

--- a/src/blocks/recent-posts/editor.scss
+++ b/src/blocks/recent-posts/editor.scss
@@ -4,7 +4,7 @@
 // Additional styles necessary to assist the editor.
 // Enqueued after style.scss.
 //--------------------------------------------------------------
-.gutenberg .wp-block-recent-posts {
+.gutenberg .wp-block-wds-recent-posts {
 	padding-left: 2.5em;
 
 	&.is-grid {
