--- a/src/blocks/recent-posts/editor.scss
+++ b/src/blocks/recent-posts/editor.scss
@@ -4,10 +4,15 @@
 // Additional styles necessary to assist the editor.
 // Enqueued after style.scss.
 //--------------------------------------------------------------
-.gutenberg .wp-block-wds-recent-posts {
-	padding-left: 2.5em;
+.wp-block-wds-recent-posts {
 
-	&.is-grid {
-		padding-left: 0;
+	li {
+		list-style: none;
+	}
+
+	@for $i from 2 through 6 {
+		&.columns-#{ $i } li {
+			width: calc( ( 100% / #{ $i } ) - 16px );
+		}
 	}
 }
