--- a/src/blocks/recent-posts/style.scss
+++ b/src/blocks/recent-posts/style.scss
@@ -5,29 +5,32 @@
 // Appears on both front and back-end.
 //--------------------------------------------------------------
 .wp-block-wds-recent-posts {
-	&.alignleft {
-		margin-right: 2em;
-	}
 
-	&.alignright {
-		margin-left: 2em;
-	}
-
-	&.is-grid {
-		display: flex;
-		flex-wrap: wrap;
-		list-style: none;
-		padding: 0;
-
-		li {
-			margin: 0 16px 16px 0;
-			width: 100%;
+	ul {
+		&.alignleft {
+			margin-right: 2em;
 		}
-	}
 
-	@for $i from 2 through 6 {
-		&.columns-#{ $i } li {
-			width: calc( ( 100% / #{ $i } ) - 16px );
+		&.alignright {
+			margin-left: 2em;
+		}
+
+		&.is-grid {
+			display: flex;
+			flex-wrap: wrap;
+			list-style: none;
+			padding: 0;
+
+			li {
+				margin: 0 16px 16px 0;
+				width: 100%;
+			}
+		}
+
+		@for $i from 2 through 6 {
+			&.columns-#{ $i } li {
+				width: calc( ( 100% / #{ $i } ) - 16px );
+			}
 		}
 	}
 }
