--- a/src/blocks/related-posts/editor.scss
+++ b/src/blocks/related-posts/editor.scss
@@ -63,6 +63,10 @@
 		} // > ul
 	} // .related-left-colum
 
+	.selected-posts-container {
+		min-height: 19rem;
+	} // .selected-posts-container
+
 	//-----------------------------------------
 	// Loader Position
 	//-----------------------------------------
