sets link color to inherit

--- a/src/blocks/related-posts/editor.scss
+++ b/src/blocks/related-posts/editor.scss
@@ -45,6 +45,10 @@
 				} // &:last-child
 			} // li
 		} // > ul
+
+		a {
+			color: inherit;
+		} // a
 	} // .related-left-column, .related-right-column
 
 	.related-left-column {
