correctly sets the font size of the the column text title(not editable) and make them gray.

--- a/src/blocks/two-column-block/editor.scss
+++ b/src/blocks/two-column-block/editor.scss
@@ -28,7 +28,8 @@
 	.wp-block-wds-two-column {
 
 		.content-block-content h2 {
-			font-size: rem(18);
+			color: $color-silver;
+			font-size: 17px;
 		} // .content-block-contenth2
 	} // .wp-block-wds-two-column
 } // .wp-admin
