Feature/editor styles to match front end (#40)
* Add block controls for changing the gist URL after it's been initially set, minor reformatting, add editor styles scss file

* adds a little breathing room to the bottom of the gist block so it doesn’t overlap the next block that’s added.

* adds a little breathing room to top of gist block on the front end.

* Hero and CTA editor styles.

* add our front end breakpoints to common.scss and breakpoint mixin

* some responsive shared styles for two column front and back end. Update target for max width on backend(new changes added to core).

* compiled files

* make sure the hero is only true full width on the front end and just fills the editor area on the backend.

* build file

* center the bg of cusom background options.

* compiled.

* highlight blocks when they are hovered or selected on the page

* compiled files

* add is-typing class so block stays at full opacity when editing.

* compiled files

* add code comments and a bit of spacing between our blocks in the editor.

* breakup pieces of common.scss into a sass folder and partials, import them into common.scss

* makes sure default block goes full width bc of background options and the same for cta block.

* remove max width from our two column block

* compiled files

* add some breakpoint adjustments for gist block

* makes button text field a littl more like the front end.

* changes placeholder text for the backend to reflect the action.

* compiled files

* consolidate and refactor some editor/styles blocks partials and add to global blocks partial. remove scss files no longer needed for cta and default blocks.

* save all the files

* build files

* updates placeholder text for cta, hero and two column blocks.

* styling adjustments for the hero and two column blocks. remove dimming from global block partial for now.

* build files.

* correctly sets the font size of the the column text title(

--- a/src/blocks/two-column-block/editor.scss
+++ b/src/blocks/two-column-block/editor.scss
@@ -5,7 +5,6 @@
 // Enqueued after style.scss.
 //--------------------------------------------------------------
 .wp-block-wds-two-column {
-	max-width: 740px;
 
 	.content-block-container {
 
@@ -23,6 +22,17 @@
 	} // .block-title
 } // .wp-block-wds-two-column
 
+// Ensure we're only changing the admin font size.
+.wp-admin {
+
+	.wp-block-wds-two-column {
+
+		.content-block-content h2 {
+			color: $color-silver;
+			font-size: 17px;
+		} // .content-block-contenth2
+	} // .wp-block-wds-two-column
+} // .wp-admin
 
 //-----------------------------------------
 // Editing Toolbar (alignment, bold, italic, etc.)
