--- a/src/blocks/hero/editor.scss
+++ b/src/blocks/hero/editor.scss
@@ -4,6 +4,11 @@
 // Default styles for this block.
 // Appears on the back-end.
 //--------------------------------------------------------------
-.wp-block-wds-hero {
-	min-height: unset;
-} // .wp-block-wds-hero
+
+.edit-post-visual-editor .editor-block-list__block {
+
+	// Push the Hero as far as it can go while remaining editable.
+	.wp-block-wds-hero {
+		min-height: 320px;
+	} // .wp-block-wds-hero
+} // .edit-post-visual-editor .editor-block-list__block
