--- a/src/sass/_global-blocks.scss
+++ b/src/sass/_global-blocks.scss
@@ -1,9 +1,15 @@
 //--------------------------------------------------------------
-// Block Styles
-//
-// Default styles for this block.
-// Appears on both front and back-end.
+// Global Block Styles (Editor/Backend)
 //--------------------------------------------------------------
+
+// Give our blocks some breathing room in the editor for a better experience.
+.wp-admin [data-type^="wds"] {
+	margin-bottom: 30px;
+	margin-top: 30px;
+	max-width: none;
+} // .wp-admin [data-type^="wds"]
+
+// Custom video backgrounds.
 .has-video-background {
 	overflow: hidden;
 	position: relative;
@@ -23,6 +29,15 @@
 	} // .video-container
 } // .has-video-background
 
+
+// Custom background styles.
 .has-custom-background {
+	background-position: center center;
+	background-repeat: no-repeat;
 	padding: 20px;
+
+	// The should help the front end only to work out of the box.
+	.site-content & {
+		@include full-width;
+	} // .site-content &
 } // .has-custom-background
