--- a/src/blocks/users-grid-test/editor.scss
+++ b/src/blocks/users-grid-test/editor.scss
@@ -1,5 +1,5 @@
 //--------------------------------------------------------------
-// Editor Styles for New Related Posts
+// Editor Styles for Users Grid
 //
 // Additional styles necessary to assist the editor.
 // Enqueued after style.scss.
@@ -7,89 +7,12 @@
 
 // sass-lint:disable class-name-format, no-qualifying-elements
 
-.users-grid-container-list {
-	border: 1px solid $gray;
-	display: flex;
-	font-family: $default-font;
-	position: relative;
+.wp-block-wds-users-grid-test {
 
-	.related-left-column,
-	.related-right-column {
-		height: 19rem;
-		margin: 0;
-		width: 50%;
-
-		h3 {
-			background-color: $light-gray-100;
-			border-bottom: 1px solid $gray;
-			flex: 0 0 50%;
-			margin: 0;
-			padding: 0.4375rem;
-		} // h3
-
-		> ul {
-			height: calc(100% - 52px); // compensate for heading.
-			margin: 0;
-			overflow-y: auto;
-
-			li {
-				border-bottom: 1px solid $gray;
-				cursor: pointer;
-				font-size: 1rem;
-				line-height: 1.125rem;
-				list-style: none;
-				padding: 0.4375rem;
-
-				&:last-child {
-					border-bottom: 0;
-				} // &:last-child
-			} // li
-		} // > ul
-
-		a {
-			color: inherit;
-		} // a
-	} // .related-left-column, .related-right-column
-
-	.related-left-column {
-		border-right: 1px solid $gray;
-
-		> ul {
-
-			li {
-
-				&.is-selected {
-					cursor: default;
-					opacity: 0.5;
-					pointer-events: none;
-				} // .is-selected
-			} // li
-		} // > ul
-	} // .related-left-colum
-
-	.selected-posts-container {
-		min-height: 19rem;
-	} // .selected-posts-container
-
-	//-----------------------------------------
-	// Loader Position
-	//-----------------------------------------
-	.wp-block-loader {
-		background-color: rgba($light-gray-100, 0.8);
-		height: 100%;
-		position: absolute;
-		width: 100%;
-
-		> img {
-			left: 50%;
-			position: absolute;
-			top: 50%;
-			transform: translateX( -50% );
-		} // img
-	} // .wp-block-loader
-
-	.selected-users-container {
+	.search-selected-container {
+		align-content: center;
 		display: flex;
+		flex-wrap: wrap;
 		justify-content: space-evenly;
 		width: 100%;
 
@@ -97,25 +20,9 @@
 			list-style-type: none;
 		}
 
-		li {
+		.column {
+			flex: 0 1 25%;
 			text-align: center;
-
-			img {
-				border-radius: 100%;
-			}
-		}
-	}
-} // .wp-block-wds-related-posts-test
-
-//-----------------------------------------
-// Form
-//-----------------------------------------
-.editor-block-list__block input.wds-related-posts-search-form {
-	border-radius: 0;
-	font-size: 1rem;
-	margin: 0 0 -0.0625rem;
-	padding: 0.625rem;
-	position: relative;
-	width: 100%;
-	z-index: 100;
-}
+		} // .column
+	} // .search-selected-container
+} // .wp-block-wds-users-grid-test
