--- a/src/blocks/users-grid-test/style.scss
+++ b/src/blocks/users-grid-test/style.scss
@@ -1,5 +1,5 @@
 //--------------------------------------------------------------
-// New Related Posts Block Styles
+// Users Grid Block Styles
 //
 // Default styles for this block.
 // Appears on both front and back-end.
@@ -8,18 +8,19 @@
 //-----------------------------------------
 // Output
 //-----------------------------------------
-.wp-block-wds-related-posts {
+.wp-block-wds-users-grid-test {
 
-	.related-block-container-list > .selected-posts-container {
+	.search-container-list > .search-selected-container {
 		padding: 0.625rem 0.625rem 0;
-	} // .related-block-container-list > .selected-posts-container
+	} // .search-container-list > .search-selected-container
 
-	.selected-posts-container {
+	.search-selected-container {
 		display: flex;
 		flex-flow: row wrap;
 		list-style: none;
 		margin: 0;
 		padding: 0;
+		width: 100%;
 
 		li {
 			flex: 0 0 31.333%;
@@ -46,5 +47,5 @@
 				color: inherit;
 			} // a
 		} // li
-	} // .selected-posts-container
-} // .wp-block-wds-new-related-posts
+	} // .search-selected-container
+} // .wp-block-wds-new-users-grid-test
