Feature/users grid (#47)
* Copies Related Posts to modify it for a User search (very much in progress)

* Updates variables/strings to use users instead of posts

* Builds

* Adjusts output of users grid on front and backend

* Duplicates the search component as user search

* Updates the icon

* Removes the user-search component and adds a param to Search to allow for specifying what to search

* Moves the Search Edit Component from the block to a standalone component

* Adjusts conditionals in the search edit component for posts/users

* Updates a variable name (to be updated again later)

* Updates related posts with new search component

* Removes related post files that live in the search edit component

* Builds

* Renames all of the things to be less specific (i.e., "search-results-container" instead of "users-container" or "posts-container")

* Builds

* Updates more classes for better targeting and cohesiveness

* Moves the flexbox styles from Related Posts and Users Grid to the Search Edit component (same grid for both)

* Adds the shared class to the backend

* Compiles

* Renames users-grid-test to users-grid

* More renaming and cleanup

* Builds

* Removes "test" from users grid block name

* Updates description text

* Builds

* Builds

* Adjusts the componentWillUnmount function to fix a console error

* Builds

* Adjusts the output of the users

* adds orderby=included in the API query so the right block shows the added content in the right order

* adds orderby=include to the backend output to keep the rendered posts in order

* Builds

* Linting

* Builds

--- a/src/blocks/users-grid/editor.scss
+++ b/src/blocks/users-grid/editor.scss
@@ -1,6 +1,6 @@
 //--------------------------------------------------------------
-// Related Posts Block Styles
+// Editor Styles for Users Grid
 //
-// Default styles for this block.
-// Appears on both front and back-end.
+// Additional styles necessary to assist the editor.
+// Enqueued after style.scss.
 //--------------------------------------------------------------
