--- a/src/blocks/users-grid/style.scss
+++ b/src/blocks/users-grid/style.scss
@@ -1,5 +1,5 @@
 //--------------------------------------------------------------
-// Related Posts Block Styles
+// Users Grid Block Styles
 //
 // Default styles for this block.
 // Appears on both front and back-end.
