--- a/src/blocks/hero/style.scss
+++ b/src/blocks/hero/style.scss
@@ -14,6 +14,10 @@
 
 	// The should help the front end only to work out of the box.
 	.site-content & {
-		@include full-width;
+
+		// Don't apply full-width styles if we have a sidebar.
+		body:not(.has-sidebar) & {
+			@include full-width;
+		} // body:not(.has-sidebar) &
 	} // .site-content &
 } // .wp-block-wds-hero
